@@ -5,7 +5,7 @@
   </ng-container>
   <ng-container matColumnDef="value">
     <th mat-header-cell *matHeaderCellDef>Value</th>
-    <td mat-cell *matCellDef="let property" class="preformated" style="color: black;">{{property.value}}</td>
+    <td mat-cell *matCellDef="let property" class="preformated" style="color: black;" [matTooltip]="property.tooltip" >{{property.value}}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="selectedAannotationDisplayedColumns; sticky: true" [class.hidden]="!showHeader"></tr>
   <tr mat-row *matRowDef="let row; columns: selectedAannotationDisplayedColumns;"></tr>
